# soccer-info

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  async_main.py  main.py  main_httpx.py  openapi_3_0_schema_RAPIDAPI.json  pyproject.toml  requirements-dev.txt
.github/workflows/: publish-test.yml  publish.yml  readme-verification.yml  readme-verification.yml.disable
examples/: __init__.py  basic.py  basic_async.py  season matches.ipynb
soccer_info/: __init__.py
soccer_info/client/: __init__.py  base_client.py  championships.py  client.py  httpclient.py
soccer_info/client/async_/: async_client.py  async_httpclient.py
soccer_info/client/async_/domain/: championships.py
soccer_info/client/common/domain/: championships.py
soccer_info/client/sync/: client.py  httpclient.py
soccer_info/client/sync/domain/: championships.py
soccer_info/requests_/: __init__.py  enums.py  parameters.py
soccer_info/responses/: __init__.py  base.py
soccer_info/responses/championships/: __init__.py  models.py
soccer_info/responses/matches/: models.py
soccer_info/settings/: settings.py
